# Andrew-Analitic

./: .env.example  .gitignore  AGENTS_ACADEMY.md  Dockerfile  LICENSE  README.md  ROBOT_GUIDELINES.md  app_version.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
bridge/: __init__.py  __main__.py  ace_step.py  api.py  auth.py  cli.py  client.py  comfyui_client.py  comfyui_export.py  cost_estimator.py  grok_video_client.py  higgsfield_client.py  hitl.py  job_store.py  llm_telemetry.py  logging_setup.py  ltx_video.py  mcp_server.py  moltis_bridge.py  pinocut_review.py  request_log.py  scene_ops.py  schemas.py  service.py  veo_client.py  video_dispatcher.py
config/: .env.example
core/: __init__.py  andrew_swarm.py  anthropic_auth.py  checkpointing.py  memory.py  mirofish_swarm.py  mongodb_store.py  romeo_phd.py  romeo_swarm.py  routing.py  semantic_router.py  supervisor.py
demo/: demo_queries.sh  pinoblanco_vs_greywald.scenario.md  seed_demo_db.py
deploy/: BETA_RUNBOOK.md  Dockerfile.cloudrun  README.md  bootstrap-gha.sh  bootstrap.sh  cloudbuild.yaml  deploy.sh  pause.sh  provision.sh  resume.sh  smoketest.sh
docs/: ARCHITECTURE.md  BRANCH_AUDIT.md  CHANGELOG.md  PITCH.md  ROBO_QC_SPEC.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
lcb/: __init__.py  algo_templates.py  classifier.py  constraints.py  eval.py  pipeline.py  prompts.py  runner.py  state.py
scripts/: lcb_calibrate.py  setup_db.py  setup_mongo.py
tests/: conftest.py  test_ace_step.py  test_adversarial.py  test_anthropic_auth.py  test_api_smoke.py  (+33 more)
(+50 files in other folders)
