[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "andrew-swarm"
version = "1.0.0rc1"
description = "Data science AI agent: hardened analytics, budget-aware routing, Moltis-powered delivery"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agent", "data-science", "langgraph", "analytics"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
